force-app/main/default/objects/CaseMediation__c/CaseMediation__c.object-meta.xml
<CustomObject>
    <label>Mediation Case</label>
    <nameField>
        <label>Case Mediation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mediation Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>