force-app/main/default/objects/CaseMediation__c/fields/BandAidAmount__c.field-meta.xml
<CustomField>
    <fullName>BandAidAmount__c</fullName>
    <description>Specific amount of subsidy granted by the company.</description>
    <label>Valor Band-aid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>