force-app/main/default/objects/CaseMediation__c/fields/BandAidBeneficiar__c.field-meta.xml
<CustomField>
    <fullName>BandAidBeneficiar__c</fullName>
    <description>Determine who gets the credit for the Band-Aid.</description>
    <label>Beneficiário do Band-aid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
                <label>Proprietário</label>
            </value>
            <value>
                <fullName>Tenant</fullName>
                <label>Inquilino</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>