force-app/main/default/objects/CaseMediation__c/fields/BandAidNumber__c.field-meta.xml
<CustomField>
    <fullName>BandAidNumber__c</fullName>
    <description>Band-aid record identifier in the financial system.</description>
    <label>Número do Band-aid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>