force-app/main/default/objects/CaseMediation__c/fields/BandAidPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>BandAidPaymentDate__c</fullName>
    <description>Record of when the Band-aid credit was settled.</description>
    <label>Data de pagamento do Band-aid</label>
    <type>Date</type>
</CustomField>