force-app/main/default/objects/CaseMediation__c/fields/BandAidReason__c.field-meta.xml
<CustomField>
    <fullName>BandAidReason__c</fullName>
    <description>Technical justification for applying the Band-Aid.</description>
    <label>Motivo do Band-aid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>