force-app/main/default/objects/CaseMediation__c/fields/BandAidTeamApproved__c.field-meta.xml
<CustomField>
    <fullName>BandAidTeamApproved__c</fullName>
    <description>Confirmation that the financial authority has given its approval.</description>
    <label>Time Band-aid aprovou?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>