force-app/main/default/objects/CaseMediation__c/fields/ChangeReason__c.field-meta.xml
<CustomField>
    <fullName>ChangeReason__c</fullName>
    <description>Operational justification for the change in the agreed value.</description>
    <label>Motivo da mudança?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desconto Proprietário</fullName>
            </value>
            <value>
                <fullName>Utilização de Band-aid</fullName>
            </value>
            <value>
                <fullName>Evidência Válida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>