force-app/main/default/objects/CaseMediation__c/fields/ConfirmedBandAidAmount__c.field-meta.xml
<CustomField>
    <fullName>ConfirmedBandAidAmount__c</fullName>
    <description>Final price of the Band-Aid after approval.</description>
    <label>Valor do Band-aid (Confirmado)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>