force-app/main/default/objects/CaseMediation__c/fields/CurrentStage__c.field-meta.xml
<CustomField>
    <fullName>CurrentStage__c</fullName>
    <description>Define at which stage the error was identified: Repair Analysis (RA) or Dispute Analysis (DA).</description>
    <label>Qual etapa?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Análise de Reparos</fullName>
            </value>
            <value>
                <fullName>Análise de Contestação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>