force-app/main/default/objects/CaseMediation__c/fields/DoesOwnerAgreeWithDiscount__c.field-meta.xml
<CustomField>
    <fullName>DoesOwnerAgreeWithDiscount__c</fullName>
    <description>Determines whether the financial negotiation was accepted by the owner.</description>
    <label>Proprietário concorda com desconto?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>