force-app/main/default/objects/CaseMediation__c/fields/DoesOwnerAgreeWithReturn__c.field-meta.xml
<CustomField>
    <fullName>DoesOwnerAgreeWithReturn__c</fullName>
    <description>Owner approval is required to allow new entry into the property.</description>
    <label>Proprietário concorda com retorno?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>