force-app/main/default/objects/CaseMediation__c/fields/DoesOwnerHaveEvidence__c.field-meta.xml
<CustomField>
    <fullName>DoesOwnerHaveEvidence__c</fullName>
    <description>Validation to determine if the owner possesses evidence to support the dispute regarding liability.</description>
    <label>Proprietário tem evidência?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>