force-app/main/default/objects/CaseMediation__c/fields/DoesTenantAgree__c.field-meta.xml
<CustomField>
    <fullName>DoesTenantAgree__c</fullName>
    <description>Defines the initial path of the decision tree. If &quot;Yes&quot; or &quot;No answer&quot;, it triggers nothing. If the answer is &quot;No&quot;, it opens the way for the analyst to fill in the details.</description>
    <label>Inquilino concorda?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
                <label>Sim</label>
            </value>
            <value>
                <fullName>false</fullName>
                <label>Não</label>
            </value>
            <value>
                <fullName>No response</fullName>
                <label>Sem resposta</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>