force-app/main/default/objects/CaseMediation__c/fields/DoesTenantHaveEvidence__c.field-meta.xml
<CustomField>
    <fullName>DoesTenantHaveEvidence__c</fullName>
    <description>Technical validation of the liability challenge.</description>
    <label>Inquilino tem evidência?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>