force-app/main/default/objects/CaseMediation__c/fields/DoesTenantWantToReturn__c.field-meta.xml
<CustomField>
    <fullName>DoesTenantWantToReturn__c</fullName>
    <description>Check if the tenant intends to carry out the repairs directly.</description>
    <label>Inquilino quer retornar ao imóvel?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>