force-app/main/default/objects/CaseMediation__c/fields/ErrorInRepairSchedule__c.field-meta.xml
<CustomField>
    <fullName>ErrorInRepairSchedule__c</fullName>
    <description>Identify if there were any technical inconsistencies or errors in filling out the report.</description>
    <label>Erro na tabela de reparos?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>