force-app/main/default/objects/CaseMediation__c/fields/ErrorType__c.field-meta.xml
<CustomField>
    <fullName>ErrorType__c</fullName>
    <description>Detailed description of the error found in the repair schedule.</description>
    <label>Qual erro?</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>