force-app/main/default/objects/CaseMediation__c/fields/EvidenceAccepted__c.field-meta.xml
<CustomField>
    <fullName>EvidenceAccepted__c</fullName>
    <description>Technical decision of the mediator after analysis of the evidence presented.</description>
    <label>Acatamos evidência?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>