force-app/main/default/objects/CaseMediation__c/fields/FinalAmountAcceptedByTenant__c.field-meta.xml
<CustomField>
    <fullName>FinalAmountAcceptedByTenant__c</fullName>
    <description>Phase Trigger: Whether you fill in &quot;Yes&quot; or &quot;No&quot;, the case proceeds to the Payment Phase.</description>
    <label>Valor final aceito pelo inquilino?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>