force-app/main/default/objects/CaseMediation__c/fields/FinalRenegotiationAmount__c.field-meta.xml
<CustomField>
    <fullName>FinalRenegotiationAmount__c</fullName>
    <description>Final total amount determined for the case closure.</description>
    <label>Valor final da renegociação</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>