force-app/main/default/objects/CaseMediation__c/fields/FinalSummary__c.field-meta.xml
<CustomField>
    <fullName>FinalSummary__c</fullName>
    <description>Description of the mediation outcome and points agreed upon.</description>
    <label>Resumo final</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>