force-app/main/default/objects/CaseMediation__c/fields/HasBandAid__c.field-meta.xml
<CustomField>
    <fullName>HasBandAid__c</fullName>
    <description>It identifies whether a Band-Aid was granted to facilitate the agreement.</description>
    <label>Existe Band-aid nessa negociação?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>