force-app/main/default/objects/CaseMediation__c/fields/InitialStrategySummary__c.field-meta.xml
<CustomField>
    <fullName>InitialStrategySummary__c</fullName>
    <description>Record of the approach and planned limits for the negotiation.</description>
    <label>Resumo estratégia inicial</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>