force-app/main/default/objects/CaseMediation__c/fields/IsAmountChangeToBeNegotiated__c.field-meta.xml
<CustomField>
    <fullName>IsAmountChangeToBeNegotiated__c</fullName>
    <description>Indicates whether there was a change in the total amount of the negotiation after the mediator&apos;s intervention.</description>
    <label>Mudança do valor a negociar?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>