force-app/main/default/objects/CaseMediation__c/fields/IsChatAgreementBeingCharged__c.field-meta.xml
<CustomField>
    <fullName>IsChatAgreementBeingCharged__c</fullName>
    <description>A record of items that had already been agreed upon by the parties in the chat, but which are still listed as pending charges.</description>
    <label>Algum acordo em chat PP/IQ sendo cobrado</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>