force-app/main/default/objects/CaseMediation__c/fields/IsOwnerCallSuccessful__c.field-meta.xml
<CustomField>
    <fullName>IsOwnerCallSuccessful__c</fullName>
    <description>Indicates whether the attempt to contact the Owner by phone was successful.</description>
    <label>Ligação proprietário com sucesso?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>