force-app/main/default/objects/CaseMediation__c/fields/IsOwnerDisagreeWithResponsibility__c.field-meta.xml
<CustomField>
    <fullName>IsOwnerDisagreeWithResponsibility__c</fullName>
    <description>Identify whether the impasse concerns attributing the damage to the tenant.</description>
    <label>Discordância de responsabilidade pelo PP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>