force-app/main/default/objects/CaseMediation__c/fields/IsOwnerWhatsAppSuccessful__c.field-meta.xml
<CustomField>
    <fullName>IsOwnerWhatsAppSuccessful__c</fullName>
    <description>Indicates whether there was effective interaction via WhatsApp with the Owner.</description>
    <label>WhatsApp proprietário com sucesso?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>