force-app/main/default/objects/CaseMediation__c/fields/IsRenegotiationWithClientNeeded__c.field-meta.xml
<CustomField>
    <fullName>IsRenegotiationWithClientNeeded__c</fullName>
    <description>After filling in the fields above, the analyst will inform you whether or not further renegotiation with the client is needed (if an agreement was already reached in the first contact).</description>
    <label>Precisa de renegociação com cliente?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>