force-app/main/default/objects/CaseMediation__c/fields/IsTenantCallSuccessful__c.field-meta.xml
<CustomField>
    <fullName>IsTenantCallSuccessful__c</fullName>
    <description>Indicates whether the attempt to contact the tenant by phone was successful.</description>
    <label>Ligação inquilino com sucesso?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>