force-app/main/default/objects/CaseMediation__c/fields/IsTenantDisagreeWithAmount__c.field-meta.xml
<CustomField>
    <fullName>IsTenantDisagreeWithAmount__c</fullName>
    <description>Identify whether the impasse is financial.</description>
    <label>Discordância de valor pelo inquilino?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>