force-app/main/default/objects/CaseMediation__c/fields/IsTenantDisagreeWithResponsibility__c.field-meta.xml
<CustomField>
    <fullName>IsTenantDisagreeWithResponsibility__c</fullName>
    <description>Identify whether the impasse concerns liability for the damage.</description>
    <label>Discordância de responsabilidade pelo IQ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>