force-app/main/default/objects/CaseMediation__c/fields/IsTenantWhatsAppSuccessful__c.field-meta.xml
<CustomField>
    <fullName>IsTenantWhatsAppSuccessful__c</fullName>
    <description>Indicates whether there was effective interaction with the tenant via WhatsApp.</description>
    <label>WhatsApp inquilino com sucesso?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>