force-app/main/default/objects/CaseMediation__c/fields/JiraRequestNumber__c.field-meta.xml
<CustomField>
    <fullName>JiraRequestNumber__c</fullName>
    <description>Jira financial approval task ID for traceability.</description>
    <label>Número solicitação no Jira</label>
    <length>255</length>
    <type>Text</type>
</CustomField>