force-app/main/default/objects/CaseMediation__c/fields/MediatorRevisedAmount__c.field-meta.xml
<CustomField>
    <fullName>MediatorRevisedAmount__c</fullName>
    <description>Final price determined after pre-work and agreement negotiations.</description>
    <label>Valor revisado pelo mediador</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>