force-app/main/default/objects/CaseMediation__c/fields/OwnerCallLink__c.field-meta.xml
<CustomField>
    <fullName>OwnerCallLink__c</fullName>
    <description>Link to the call recording stored on Twilio for auditing purposes.</description>
    <label>Link da ligação proprietário</label>
    <length>255</length>
    <type>Text</type>
</CustomField>