force-app/main/default/objects/CaseMediation__c/fields/OwnerCallSummary__c.field-meta.xml
<CustomField>
    <fullName>OwnerCallSummary__c</fullName>
    <description>Key notes on what was discussed and agreed upon during the call with the PP.</description>
    <label>Resumo da ligação proprietário</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>