force-app/main/default/objects/CaseMediation__c/fields/OwnerProvidedAmount__c.field-meta.xml
<CustomField>
    <fullName>OwnerProvidedAmount__c</fullName>
    <description>Record the counter-offer or value that the owner considers correct.</description>
    <label>Valor trazido pelo proprietário</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>