force-app/main/default/objects/CaseMediation__c/fields/OwnerValueDisagreement__c.field-meta.xml
<CustomField>
    <fullName>OwnerValueDisagreement__c</fullName>
    <description>Identify whether the owner&apos;s dispute relates to the amount charged by IQ.</description>
    <label>Discordância de valor pelo proprietário?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>