force-app/main/default/objects/CaseMediation__c/fields/OwnerWhatsAppLink__c.field-meta.xml
<CustomField>
    <fullName>OwnerWhatsAppLink__c</fullName>
    <description>Link or identifier of the WhatsApp conversation in the messaging system.</description>
    <label>Link do WhatsApp proprietário</label>
    <length>255</length>
    <type>Text</type>
</CustomField>