force-app/main/default/objects/CaseMediation__c/fields/PayfaturasAmount__c.field-meta.xml
<CustomField>
    <fullName>PayfaturasAmount__c</fullName>
    <description>The exact amount that was submitted for billing/payment.</description>
    <label>Valor no Payfaturas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>