force-app/main/default/objects/CaseMediation__c/fields/PayfaturasPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PayfaturasPaymentDate__c</fullName>
    <description>Date on which the payment will be processed in the system.</description>
    <label>Data de pagamento no Payfaturas</label>
    <type>Date</type>
</CustomField>