force-app/main/default/objects/CaseMediation__c/fields/PayfaturasRequestNumber__c.field-meta.xml
<CustomField>
    <fullName>PayfaturasRequestNumber__c</fullName>
    <description>Transaction ID from the Payfaturas platform.</description>
    <label>Número solicitação no Payfaturas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>