force-app/main/default/objects/CaseMediation__c/fields/ReportedAmount__c.field-meta.xml
<CustomField>
    <fullName>ReportedAmount__c</fullName>
    <description>The total original value that was stated in the report before the mediation.</description>
    <label>Valor apresentado no laudo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>