force-app/main/default/objects/CaseMediation__c/fields/TenantCallLink__c.field-meta.xml
<CustomField>
    <fullName>TenantCallLink__c</fullName>
    <description>Link to the recording of the call with the tenant on Twilio.</description>
    <label>Link da ligação inquilino</label>
    <length>255</length>
    <type>Text</type>
</CustomField>