force-app/main/default/objects/CaseMediation__c/fields/TenantCallSummary__c.field-meta.xml
<CustomField>
    <fullName>TenantCallSummary__c</fullName>
    <description>Key notes on what was discussed and agreed upon during the call with IQ.</description>
    <label>Resumo da ligação inquilino</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>