force-app/main/default/objects/CaseMediation__c/fields/TenantProvidedAmount__c.field-meta.xml
<CustomField>
    <fullName>TenantProvidedAmount__c</fullName>
    <description>Record of the financial counter-proposal made by the tenant.</description>
    <label>Valor trazido pelo inquilino</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>