force-app/main/default/objects/CaseMediation__c/fields/TenantProvidedEvidence__c.field-meta.xml
<CustomField>
    <fullName>TenantProvidedEvidence__c</fullName>
    <description>It identifies whether the tenant has presented evidence to contest the items.</description>
    <label>Inquilino trouxe evidência?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>