force-app/main/default/objects/CaseMediation__c/fields/TenantWhatsAppLink__c.field-meta.xml
<CustomField>
    <fullName>TenantWhatsAppLink__c</fullName>
    <description>Link or identifier for the WhatsApp conversation with the Tenant.</description>
    <label>Link do WhatsApp inquilino</label>
    <length>255</length>
    <type>Text</type>
</CustomField>