force-app/main/default/objects/CaseMediation__c/fields/ValidEvidenceAmount__c.field-meta.xml
<CustomField>
    <fullName>ValidEvidenceAmount__c</fullName>
    <description>The value of the appraisal was reduced due to accepted evidence from the tenant.</description>
    <label>Valor evidência válida</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>