force-app/main/default/objects/CaseMediation__c/fields/ValueChanged__c.field-meta.xml
<CustomField>
    <fullName>ValueChanged__c</fullName>
    <description>Indicates whether the final value differs from the value initially presented in the report.</description>
    <label>Teve mudança de valor?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>